#187/fix landing alignment
* fix landing alignment
* remove scroll
* fix animation width

--- a/webapp/src/pages/LoginPage/LoginPage.css
+++ b/webapp/src/pages/LoginPage/LoginPage.css
@@ -3,14 +3,14 @@
   padding: var(--padding-top-bottom) var(--padding-sides);
   height: 100vh;
   min-height: 40rem;
-  overflow: scroll;
+  overflow: hidden;
   background-color: var(--color-background);
   color: var(--color-light);
   display: grid;
   grid-template-columns: repeat(var(--column-number), 1fr);
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
-    'title title title title'
+    'title title ... ...'
     'main main main main'
     'end end end end';
 }
@@ -27,14 +27,22 @@
 
 .login-container {
   grid-area: main;
-  align-self: center;
+  align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
   gap: 0.5rem var(--column-gap);
+  text-align: center;
+}
+
+.login-container__separator {
+  align-items: center;
 }
 
 .login-form > .input,
-.button {
+.button,
+.final-text,
+.login-container__separator {
   margin-bottom: 0.875rem;
   width: 100%;
   min-width: 15rem;
@@ -43,6 +51,9 @@
 
 .login-form {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .login-form > .button {
   margin-bottom: 0.875rem;
@@ -56,6 +67,7 @@
 
 .final-text {
   display: flex;
+  justify-content: center;
   gap: 0.3rem;
 }
 
@@ -75,7 +87,7 @@
     grid-template-columns: repeat(var(--column-number), 1fr);
     grid-template-rows: repeat(3, auto);
     grid-template-areas:
-      'title title title title title title ... ... ... ... ... ...'
+      'title title title ... ... ... ... ... ... ... ... ...'
       'main main main main main ... ... animation animation animation animation animation'
       'end end end end end ... ... ... ... ... ... ...';
   }
@@ -88,5 +100,10 @@
 
   .login .landing-animation {
     display: inline;
+  }
+
+  .login-form,
+  .login-container {
+    align-items: flex-start;
   }
 }
